hphp/hack/test/typecheck/shape_idx_newtype.php.exp
File "shape_idx_newtype.php--use.php", line 4, characters 10-32:
Invalid return type (Typing[4110])
File "shape_idx_newtype.php--use.php", line 3, characters 22-24:
This is an int
File "shape_idx_newtype.php--def.php", line 4, characters 27-30:
It is incompatible with a nullable type
